Improve UX and add new route top 10 films

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,4 +1,4 @@
-.row-section{float:left; width:100%; background: #42275a;  /* fallback for old browsers */
+.row-section{float:left; width:100%; background: #FECC02;  /* fallback for old browsers */
 }
 .row-section h2{float:left; width:100%; color:#fff; margin-bottom:30px; font-size: 14px;}
 .row-section h2 span{font-family: 'Libre Baskerville', serif; display:block; font-size:45px; text-transform:none; margin-bottom:20px; margin-top:30px;font-weight:700;}
@@ -11,8 +11,8 @@
 .row-section .row-block .media{border:1px solid #d5dbdd; padding:5px 20px; border-radius: 5px; box-shadow:0px 2px 1px rgba(0,0,0,0.04); background:#fff;}
 .row-section .media .media-left img{width:75px;}
 .row-section .media .media-body p{padding: 0 15px; font-size:14px;}
-.row-section .media .media-body h4 {color: #6b456a; font-size: 18px; font-weight: 600; margin-bottom: 0; padding-left: 14px; margin-top:12px;}
-.btn-default{background:#6B456A; color:#fff; border-radius:30px; border:none; font-size:16px;}
+.row-section .media .media-body h4 {color: #FECC02; font-size: 18px; font-weight: 600; margin-bottom: 0; padding-left: 14px; margin-top:12px;}
+.btn-default{background:#FECC02; color:#fff; border-radius:30px; border:none; font-size:16px;}
 .fa-spin {
     margin: 0 auto;}
 body {
